exports[`test toBeCalled works only on spies or jest.fn 1`] = `[Error: toBeCalled matcher can only be used on a spy or mock function.]`;

exports[`test toBeCalled works with jasmine.createSpy 1`] = `[Error: Expected the spy to be called.]`;

exports[`test toBeCalled works with jasmine.createSpy 2`] = `[Error: Expected the spy not to be called, but it was called 1 time.]`;

exports[`test toBeCalled works with jasmine.createSpy 3`] = `[Error: toBeCalled matcher does not accept any arguments.]`;

exports[`test toBeCalled works with jest.fn 1`] = `[Error: Expected the mock function to be called.]`;

exports[`test toBeCalled works with jest.fn 2`] = `[Error: Expected the mock function not to be called, but it was called 1 time.]`;

exports[`test toBeCalled works with jest.fn 3`] = `[Error: toBeCalled matcher does not accept any arguments.]`;

exports[`test toBeCalledWith works only on spies or jest.fn 1`] = `[Error: toBeCalledWith matcher can only be used on a spy or mock function.]`;

exports[`test toBeCalledWith works with jasmine.createSpy 1`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was not called.]
`;

exports[`test toBeCalledWith works with jasmine.createSpy 2`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was called with:
["foo","bar1"].]
`;

exports[`test toBeCalledWith works with jasmine.createSpy 3`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was called with:
["foo","bar2"],
["foo","bar1"].]
`;

exports[`test toBeCalledWith works with jasmine.createSpy 4`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was called with:
["foo","bar3"],
["foo","bar2"],
["foo","bar1"].]
`;

exports[`test toBeCalledWith works with jasmine.createSpy 5`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was called with:
["foo","bar4"],
["foo","bar3"],
["foo","bar2"]
and 1 other call.]
`;

exports[`test toBeCalledWith works with jasmine.createSpy 6`] = `[Error: Expected spy not to be called with '["foo","bar"]' but it was]`;

exports[`test toBeCalledWith works with jest.fn 1`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was not called.]
`;

exports[`test toBeCalledWith works with jest.fn 2`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was called with:
["foo","bar1"].]
`;

exports[`test toBeCalledWith works with jest.fn 3`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was called with:
["foo","bar2"],
["foo","bar1"].]
`;

exports[`test toBeCalledWith works with jest.fn 4`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was called with:
["foo","bar3"],
["foo","bar2"],
["foo","bar1"].]
`;

exports[`test toBeCalledWith works with jest.fn 5`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was called with:
["foo","bar4"],
["foo","bar3"],
["foo","bar2"]
and 1 other call.]
`;

exports[`test toBeCalledWith works with jest.fn 6`] = `[Error: Expected mock function not to be called with '["foo","bar"]' but it was]`;

exports[`test toHaveBeenCalled works only on spies or jest.fn 1`] = `[Error: toHaveBeenCalled matcher can only be used on a spy or mock function.]`;

exports[`test toHaveBeenCalled works with jasmine.createSpy 1`] = `[Error: Expected the spy to be called.]`;

exports[`test toHaveBeenCalled works with jasmine.createSpy 2`] = `[Error: Expected the spy not to be called, but it was called 1 time.]`;

exports[`test toHaveBeenCalled works with jasmine.createSpy 3`] = `[Error: toHaveBeenCalled matcher does not accept any arguments.]`;

exports[`test toHaveBeenCalled works with jest.fn 1`] = `[Error: Expected the mock function to be called.]`;

exports[`test toHaveBeenCalled works with jest.fn 2`] = `[Error: Expected the mock function not to be called, but it was called 1 time.]`;

exports[`test toHaveBeenCalled works with jest.fn 3`] = `[Error: toHaveBeenCalled matcher does not accept any arguments.]`;

exports[`test toHaveBeenCalledWith works only on spies or jest.fn 1`] = `[Error: toHaveBeenCalledWith matcher can only be used on a spy or mock function.]`;

exports[`test toHaveBeenCalledWith works with jasmine.createSpy 1`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was not called.]
`;

exports[`test toHaveBeenCalledWith works with jasmine.createSpy 2`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was called with:
["foo","bar1"].]
`;

exports[`test toHaveBeenCalledWith works with jasmine.createSpy 3`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was called with:
["foo","bar2"],
["foo","bar1"].]
`;

exports[`test toHaveBeenCalledWith works with jasmine.createSpy 4`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was called with:
["foo","bar3"],
["foo","bar2"],
["foo","bar1"].]
`;

exports[`test toHaveBeenCalledWith works with jasmine.createSpy 5`] = `
[Error: Expected spy to be called with:
["foo","bar"]
But was called with:
["foo","bar4"],
["foo","bar3"],
["foo","bar2"]
and 1 other call.]
`;

exports[`test toHaveBeenCalledWith works with jasmine.createSpy 6`] = `[Error: Expected spy not to be called with '["foo","bar"]' but it was]`;

exports[`test toHaveBeenCalledWith works with jest.fn 1`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was not called.]
`;

exports[`test toHaveBeenCalledWith works with jest.fn 2`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was called with:
["foo","bar1"].]
`;

exports[`test toHaveBeenCalledWith works with jest.fn 3`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was called with:
["foo","bar2"],
["foo","bar1"].]
`;

exports[`test toHaveBeenCalledWith works with jest.fn 4`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was called with:
["foo","bar3"],
["foo","bar2"],
["foo","bar1"].]
`;

exports[`test toHaveBeenCalledWith works with jest.fn 5`] = `
[Error: Expected mock function to be called with:
["foo","bar"]
But was called with:
["foo","bar4"],
["foo","bar3"],
["foo","bar2"]
and 1 other call.]
`;

exports[`test toHaveBeenCalledWith works with jest.fn 6`] = `[Error: Expected mock function not to be called with '["foo","bar"]' but it was]`;
